AUS-229: In DataItemTest, refactored sort test